Fix team pic alignment issue.

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -675,6 +675,7 @@ section h3.section-subheading {
 
 .team-member img {
     margin: 0 auto;
+    display: inline;
     border: 7px solid #fff;
     box-shadow: 0 0 0 1px hsl(0, 0%, 70%);
 }
